<resources>
    <string name="app_name">ACME Client</string>
    <string name="logo_description" />
    <string name="title_activity_nav">MainActivity</string>
    <string name="home_title">Home</string>

    <string name="empty_string"/>

    <!--Sign in-->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sign_in">Sign in</string>
    <string name="prompt_redirect_sign_up">I don\'t have an account</string>
    <string name="error_unknown_user">Username/password combination is incorrect</string>
    <string name="error_wrong_credentials">Username/password combination is incorrect</string>

    <!--Sign up-->
    <string name="section_personal">Personal information</string>
    <string name="prompt_name">Name</string>
    <string name="section_billing">Billing information</string>
    <string name="prompt_nif">NIF</string>
    <string name="prompt_cc_number">Debit/Credit card number</string>
    <string name="prompt_cc_expiration_month">Month</string>
    <string name="prompt_cc_expiration_year">Year</string>
    <string name="prompt_cc_cvv">Security code</string>
    <string name="section_credentials">Credentials</string>
    <string name="prompt_sign_up">Sign up</string>
    <string name="prompt_redirect_sign_in">I already have an account</string>
    <string name="error_username_taken">Username is already taken</string>
    <string name="error_weak_password">Password must be at least 8 characters and have letters and numbers</string>

    <!--Generic errors-->
    <string name="error_unknown">An error has occurred</string>
    <string name="error_required">This field is required</string>
    <string name="error_invalid">This field is invalid</string>

    <string name="no_items_available">No items available</string>
    <string name="no_vouchers_available">No vouchers available</string>
    <string name="no_orders_available">No past orders available</string>

    <!--List voucher-->
    <string name="add_item">Add</string>
    <string name="remove_item">Remove</string>
    <string name="vouchers_offer_description">Free coffee</string>
    <string name="vouchers_discount_description">5% discount</string>
    <string name="vouchers_warning">Can only select one</string>

    <!--Checkout-->
    <string name="title_checkout">Checkout</string>
    <string name="section_items">Items</string>
    <string name="no_items_selected">No items selected</string>
    <string name="checkout_item_price">(%1$d) %2$1.2f€</string>
    <string name="no_vouchers_selected">No vouchers selected</string>
    <string name="section_vouchers">Vouchers</string>
    <string name="checkout_total_description">Total:</string>
    <string name="checkout_total_price">%1$1.2f€</string>
    <string name="prompt_checkout">Checkout</string>

    <!--Payment-->
    <string name="payment_qr_code">QR Code</string>
    <string name="payment_nfc">NFC</string>

    <string name="payment_qr_code_description">Scan the QR code in the terminal</string>
    <string name="payment_nfc_description">Hold the phone next to the terminal</string>
    <string name="payment_complete">Complete</string>

    <string name="nfc_not_available">NFC is not available on this device</string>
    <string name="nfc_disabled">NFC disabled on this device. Turn on to proceed</string>

    Receipt
    <string name="receipt_tax_no"><small>TAX No.</small></string>
    <string name="cc_number_format">&#8226;&#8226;&#8226;&#8226; %1$s</string>

    <string name="error_no_items">No items available</string>
    <string name="error_fetch_items">An error has occurred</string>
    <string name="qrcode_content_description">qrcode</string>
    <string name="item_dialog_save_button">SAVE</string>
    <string name="item_dialog_cancel_button">CANCEL</string>
    <string name="item_dialog_title">Set quantity</string>
    <string name="view_cart">View cart</string>
    <string name="search_hint">Search for items</string>
    <string name="filter_by_category">Filter by Category</string>
    <string name="show_only_favorites">Show only favorites</string>
    <string name="apply_filter">Apply</string>
    <string name="splash_screen_made_by">Made by <b>Miguel</b> and <b>Xavi</b> @FEUP</string>
    <string name="view_receipt_button">View Receipt</string>
    <string name="past_orders_title">Past Orders</string>
    <string name="vouchers_title">Vouchers</string>
    <string name="checkout_title">Checkout</string>
</resources>