<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="orderNumber"
            type="Integer" />

        <variable
            name="hasVouchers"
            type="Boolean" />

        <variable
            name="total"
            type="Double" />

        <variable
            name="nif"
            type="String" />

        <variable
            name="ccNumberLastFour"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/close_receipt_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@color/colorTransparent"
            android:tint="@color/colorNavBar"
            android:scaleType="fitXY"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/past_orders_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{@string/receipt_title(orderNumber)}"
            android:textColor="@color/colorNavBar"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Receipt - Order #1"/>

        <View
            android:id="@+id/title_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/colorNavBar"
            app:layout_constraintTop_toBottomOf="@id/past_orders_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/title_divider"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/checkout_items_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/section_items"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/checkout_items_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/checkout_list_item"
                    app:layout_constraintTop_toBottomOf="@+id/checkout_items_section" />

                <TextView
                    android:id="@+id/checkout_vouchers_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section_vouchers"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_marginTop="@dimen/listNotEmpty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkout_items_recycler_view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_vouchers_selected"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkout_vouchers_section"
                    isGone="@{hasVouchers}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/checkout_vouchers_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/checkout_vouchers_section"
                    tools:itemCount="2"
                    tools:listitem="@layout/checkout_list_voucher" />

                <TextView
                    android:id="@+id/checkout_total_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_total_description"
                    android:textAlignment="textStart"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceLargePopupMenu" />

                <TextView
                    android:id="@+id/checkout_total_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{@string/checkout_total_price(total)}"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:textAppearance="?attr/textAppearanceLargePopupMenu"
                    tools:text="10.00€" />

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/checkout_total_flow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:constraint_referenced_ids="checkout_total_description,checkout_total_price"
                    app:flow_horizontalGap="10dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkout_vouchers_recycler_view" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/colorNavBar"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintTop_toBottomOf="@id/checkout_total_flow" />

                <ImageView
                    android:id="@+id/receipt_card_icon"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:contentDescription="credit_card_icon"
                    app:layout_constraintHorizontal_weight="0.15"
                    android:src="@drawable/ic_baseline_credit_card_24"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/receipt_ccNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{@string/cc_number_format(ccNumberLastFour)}"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textColor="@color/colorNavBar"
                    app:layout_constraintHorizontal_weight="0.45"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="&#8226;&#8226;&#8226;&#8226; 1234" />

                <TextView
                    android:id="@+id/receipt_tax_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/receipt_tax_no"
                    android:textAlignment="textEnd"
                    android:textColor="@color/material_on_background_disabled"
                    app:layout_constraintHorizontal_weight="0.2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="TAX No. " />

                <TextView
                    android:id="@+id/receipt_nif"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{nif}"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textColor="@color/colorNavBar"
                    app:layout_constraintHorizontal_weight="0.35"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="123456789 " />

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/receipt_flow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:constraint_referenced_ids="receipt_card_icon,receipt_ccNumber,receipt_tax_no,receipt_nif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    app:layout_constraintBottom_toBottomOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>